# V4-IFJ

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  Makefile  Makefile.template  README.md  rozdeleni  rozsireni
src/: CMakeLists.txt  char_sequence.c  char_sequence.h  enums.h  error.h  foo.c  generator.c  generator.h  generator_static.h  main.c  parser.c  parser.h  precedence.c  precedence.h  rulemacros.h  rules.c  rules.h  scanner.c  scanner.h  scanner_states.c  scanner_states.h  semantics.c  semantics.h  symtable.c  symtable.h  syntax.c  syntax.h  tokens.c  tokens.h
src/container/: CMakeLists.txt  char_sequence.c  char_sequence.h  forward_list.c  forward_list.h  forward_list_private.h  hash_map.c  hash_map.h
tests/: CMakeLists.txt  char_sequence_tests.c  tempTest.c  test.c
tests/container/: forward_list_tests.c  forward_list_tests.cpp  hash_map_tests.cpp  test_char_sequence.cpp  test_forward_list.c  test_forward_list.cpp  test_hash_map.cpp
tests/examples/: example3.go
tests/go_files/examples/: example1.go  example2.go  example3.go  hello.go  input.go  inputs.go  scope.go  two_pass.go  varfun.go
tests/go_files/lex/characters/: amp.go  bracket.go  dolar.go  dot.go  question.go  sharp.go
tests/go_files/lex/comments/: block_line.go  line_block.go  line_nested.go  multiline.go  unending.go
tests/go_files/lex/ids/: id_all.go  id_numbers.go  id_starting_underscore.go
tests/go_files/lex/numbers/: float_dot.go  float_dot_zero.go  float_dot_zeroes.go  float_exp_1.go  float_exp_2.go  float_exp_3.go  float_exp_4.go  float_exp_dot_1.go  float_exp_dot_2.go  float_exp_zero_1.go  float_exp_zero_2.go  float_exp_zeroes.go  float_space.go  int.go  leading_zeroes_float.go  leading_zeroes_int.go  zero_float.go  zero_int.go  zeroes.go
tests/go_files/lex/strings/: empty_string.go  string.go  string_bad_escape_1.go  string_bad_escape_2.go  string_bad_escape_3.go  string_bad_escape_4.go  string_escape.go  unfinished_string_1.go  unfinished_string_2.go
tests/go_files/sem/builtin/: cast_1.go  cast_3.go  chr_1.go  inputf_1.go  inputi_1.go  inputs_1.go  len_1.go  ord_1.go  substr_1.go
tests/go_files/sem/declaration/: multiple_vars_2.go  multiple_vars_3.go  multiple_vars_5.go
tests/go_files/sem/expresion/: add_7.go  add_8.go  add_9.go  div_6.go  div_7.go  mul_6.go  mul_7.go  sub_6.go  sub_7.go
tests/go_files/sem/extensions/: and_1.go  and_2.go  assign_zero_div_f.go  assign_zero_div_i.go  bool_eq.go  bool_gt.go  bool_neq.go  or_1.go  or_2.go  unary_1.go  (+6 more)
tests/go_files/syntactic_fail/: func_type_param_double.go  func_type_param_invalid.go  func_type_return_double.go  func_type_return_invalid.go  func_type_return_invalid_2.go  prolog_double.go  prolog_invalid.go  prolog_noeol.go
tests/ifj_testsuite/: test_testsuite.h  test_testsuite_lex.cpp  test_testsuite_sem.cpp  test_testsuite_syn.cpp
tests/precedence/: test_precedence.h  test_precedence_basic.cpp
tests/scanner/: float_literal_tests.cpp  identifier_keyword_tests.cpp  int_literal_tests.cpp  literal_expression_tests.cpp  scanner_tests.h  string_literal_tests.cpp  test_float_literal.cpp  test_identifier_keyword.cpp  test_int_literal.cpp  test_literal_expression.cpp  test_scanner.cpp  test_scanner.h  test_string_literal.cpp  test_token_list.cpp  test_token_list.h  test_tokens.cpp
tests/symtable/: test_symtable.cpp  test_symtable.h
tests/syntax_analysis/: test_syntax.h  test_syntax_basic.cpp  test_syntax_examples.cpp  test_syntax_fail.cpp  test_syntax_file.h
tests/x_precedence/: test_precedence.h  test_precedence_basic.cpp
(+47 files in other folders)
